--- a/Html/index.html
+++ b/Html/index.html
@@ -7,41 +7,71 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="calculator">
-        <div class="display">
-            <input type="text" id="calculator-display" readonly>
+    <div class="calculator-container">
+        <div class="calculator">
+            <div class="display">
+                <input type="text" id="calculator-display" readonly>
+            </div>
+            <div class="buttons">
+                <div class="row">
+                    <button class="btn" onclick="clearDisplay()">C</button>
+                    <button class="btn" onclick="deleteLastCharacter()">⌫</button>
+                    <button class="btn" onclick="addOperator('/')">÷</button>
+                    <button class="btn" onclick="addOperator('*')">×</button>
+                </div>
+                <div class="row">
+                    <button class="btn" onclick="addOperator('sin(')">sin</button>
+                    <button class="btn" onclick="addOperator('cos(')">cos</button>
+                    <button class="btn" onclick="addOperator('tan(')">tan</button>
+                    <button class="btn" onclick="addOperator('^')">^</button>
+                </div>
+                <div class="row">
+                    <button class="btn" onclick="addOperator('log(')">log</button>
+                    <button class="btn" onclick="addOperator('ln(')">ln</button>
+                    <button class="btn" onclick="addOperator('sqrt(')">√</button>
+                    <button class="btn" onclick="addOperator('-')">−</button>
+                </div>
+                <div class="row">
+                    <button class="btn" onclick="addNumber('7')">7</button>
+                    <button class="btn" onclick="addNumber('8')">8</button>
+                    <button class="btn" onclick="addNumber('9')">9</button>
+                    <button class="btn" onclick="addOperator('+')">+</button>
+                </div>
+                <div class="row">
+                    <button class="btn" onclick="addNumber('4')">4</button>
+                    <button class="btn" onclick="addNumber('5')">5</button>
+                    <button class="btn" onclick="addNumber('6')">6</button>
+                    <button class="btn" onclick="performCalculation()">=</button>
+                </div>
+                <div class="row">
+                    <button class="btn" onclick="addNumber('1')">1</button>
+                    <button class="btn" onclick="addNumber('2')">2</button>
+                    <button class="btn" onclick="addNumber('3')">3</button>
+                    <button class="btn" onclick="plotGraph()">Graph</button>
+                </div>
+                <div class="row">
+                    <button class="btn zero-btn" onclick="addNumber('0')">0</button>
+                    <button class="btn" onclick="addOperator('.')">.</button>
+                </div>
+                <div class="row">
+                    <button class="btn" onclick="addVariable('x')">x</button>
+                    <button class="btn" onclick="addOperator('(')">(</button>
+                    <button class="btn" onclick="addOperator(')')">)</button>
+                    <button class="btn" onclick="addOperator('/')">÷</button>
+                </div>
+            </div>
+            <div class="input-fields">
+                <label for="domain-start">Domain Start:</label>
+                <input type="number" id="domain-start" value="-3">
+                <label for="domain-end">Domain End:</label>
+                <input type="number" id="domain-end" value="3">
+            </div>
         </div>
-        <div class="buttons">
-            <div class="row">
-                <button class="btn" onclick="clearDisplay()">C</button>
-                <button class="btn" onclick="deleteLastCharacter()">⌫</button>
-                <button class="btn" onclick="addOperator('/')">÷</button>
-                <button class="btn" onclick="addOperator('*')">×</button>
-            </div>
-            <div class="row">
-                <button class="btn" onclick="addNumber('7')">7</button>
-                <button class="btn" onclick="addNumber('8')">8</button>
-                <button class="btn" onclick="addNumber('9')">9</button>
-                <button class="btn" onclick="addOperator('-')">−</button>
-            </div>
-            <div class="row">
-                <button class="btn" onclick="addNumber('4')">4</button>
-                <button class="btn" onclick="addNumber('5')">5</button>
-                <button class="btn" onclick="addNumber('6')">6</button>
-                <button class="btn" onclick="addOperator('+')">+</button>
-            </div>
-            <div class="row">
-                <button class="btn" onclick="addNumber('1')">1</button>
-                <button class="btn" onclick="addNumber('2')">2</button>
-                <button class="btn" onclick="addNumber('3')">3</button>
-                <button class="btn" onclick="performCalculation()">=</button>
-            </div>
-            <div class="row">
-                <button class="btn zero-btn" onclick="addNumber('0')">0</button>
-                <button class="btn" onclick="addNumber('.')">.</button>
-            </div>
+        <div class="graph">
+            <canvas id="graph-canvas"></canvas>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
