--- a/Html/index.html
+++ b/Html/index.html
@@ -5,30 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphing Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="calculator-container">
         <div class="calculator">
             <div class="display">
-                <input type="text" id="calculator-display" readonly>
+                <input type="text" id="display" readonly>
             </div>
             <div class="buttons">
                 <div class="row">
                     <button class="btn" onclick="clearDisplay()">C</button>
-                    <button class="btn" onclick="deleteLastCharacter()">⌫</button>
+                    <button class="btn" onclick="removeLastCharacter()">⌫</button>
                     <button class="btn" onclick="addOperator('/')">÷</button>
                     <button class="btn" onclick="addOperator('*')">×</button>
                 </div>
                 <div class="row">
-                    <button class="btn" onclick="addOperator('sin(')">sin</button>
-                    <button class="btn" onclick="addOperator('cos(')">cos</button>
-                    <button class="btn" onclick="addOperator('tan(')">tan</button>
+                    <button class="btn" onclick="addFunction('sin')">sin</button>
+                    <button class="btn" onclick="addFunction('cos')">cos</button>
+                    <button class="btn" onclick="addFunction('tan')">tan</button>
                     <button class="btn" onclick="addOperator('^')">^</button>
                 </div>
                 <div class="row">
-                    <button class="btn" onclick="addOperator('log(')">log</button>
-                    <button class="btn" onclick="addOperator('ln(')">ln</button>
-                    <button class="btn" onclick="addOperator('sqrt(')">√</button>
+                    <button class="btn" onclick="addFunction('log')">log</button>
+                    <button class="btn" onclick="addFunction('ln')">ln</button>
+                    <button class="btn" onclick="addFunction('sqrt')">√</button>
                     <button class="btn" onclick="addOperator('-')">−</button>
                 </div>
                 <div class="row">
@@ -41,37 +42,42 @@
                     <button class="btn" onclick="addNumber('4')">4</button>
                     <button class="btn" onclick="addNumber('5')">5</button>
                     <button class="btn" onclick="addNumber('6')">6</button>
-                    <button class="btn" onclick="performCalculation()">=</button>
+                    <button class="btn" onclick="calculateResult()">=</button>
                 </div>
                 <div class="row">
                     <button class="btn" onclick="addNumber('1')">1</button>
                     <button class="btn" onclick="addNumber('2')">2</button>
                     <button class="btn" onclick="addNumber('3')">3</button>
-                    <button class="btn" onclick="plotGraph()">Graph</button>
+                    <button class="btn" onclick="drawGraph()">Graph</button>
                 </div>
                 <div class="row">
                     <button class="btn zero-btn" onclick="addNumber('0')">0</button>
-                    <button class="btn" onclick="addOperator('.')">.</button>
+                    <button class="btn" onclick="addNumber('.')">.</button>
                 </div>
                 <div class="row">
-                    <button class="btn" onclick="addVariable('x')">x</button>
+                    <button class="btn" onclick="addVariable('x')">𝑥</button>
                     <button class="btn" onclick="addOperator('(')">(</button>
                     <button class="btn" onclick="addOperator(')')">)</button>
-                    <button class="btn" onclick="addOperator('/')">÷</button>
+                    <button class="btn" onclick="addFraction()">a/b</button>
+                </div>
+                <div class="row">
+                    <button class="btn" onclick="moveCursor('left')">←</button>
+                    <button class="btn" onclick="moveCursor('right')">→</button>
+                    <button class="btn" onclick="moveCursor('up')">↑</button>
+                    <button class="btn" onclick="moveCursor('down')">↓</button>
                 </div>
             </div>
             <div class="input-fields">
                 <label for="domain-start">Domain Start:</label>
-                <input type="number" id="domain-start" value="-3">
+                <input type="number" id="domain-start" value="-10">
                 <label for="domain-end">Domain End:</label>
-                <input type="number" id="domain-end" value="3">
+                <input type="number" id="domain-end" value="10">
             </div>
         </div>
         <div class="graph">
             <canvas id="graph-canvas"></canvas>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
